[egg_info]
tag_build =
tag_date = 0

[build]
build_base = _build

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_docs]
upload-dir = docs/build/html

[sdist]
formats = gztar

[bdist_wheel]
universal = 1

[metadata]
name = aio_watts_vision
version = 0.1.0
author = mjkl-gh
author_email = 350991+mjkl-gh@users.noreply.github.com
description = Async python package for interacting with the Watts Vision API
long_description = file: README.rst, LICENSE.MD
long_description_content_type = text/markdown
url = https://github.com/mjkl-gh/aio-watts-vision
project_urls =
    Bug Tracker = https://github.com/mjkl-gh/aio-watts-vision/-/issues
    repository = https://github.com/mjkl-gh/aio-watts-vision
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.9

[options.packages.find]
where = 